# num-meth

./: LICENSE  LICENSE.md  README.md  TODO.md  pyproject.toml
mam_methods/: all.py  exceptions.py  utils.py  verify.py
mam_methods/methods/linsys/: all.py  factorization.py  gauss.py  iterative.py  other.py  remonte.py
mam_methods/methods/matrix/: all.py  charpoly.py  deflaction.py  other.py  power.py
mam_methods/methods/nolinsys/: all.py  fixed_point.py  newton.py  other.py
mam_methods/methods/poly/: all.py  bound.py  eval.py  other.py  sturm.py
